fixed responsive issues

--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
           <div class="section my-5 py-4 py-md-5">
             <div class="container mt-2 mb-4">
               <div class="section-right d-flex justify-content-between flex-wrap">
-                <div class="section-right-column col-md-5 pt-md-5 pt-lg-0 px-xl-0 section-img d-flex align-items-start align-items-lg-center justify-content-end animated fadeInRight">
+                <div class="section-right-column col-md-5 pt-md-5 pt-lg-0 px-xl-0 section-img d-flex align-items-start align-items-lg-center justify-content-end animated fadeInLeft">
                   <img src="images/facebook-case-study.png" alt="">
                 </div>
-                <div class="col-md-6 py-4 pl-3 pl-lg-4 animated fadeInLeft">
+                <div class="col-md-6 py-4 pl-3 pl-lg-4 animated fadeInRight">
                   <h2 class="section-title">Facebook's Team Was so Impressed... They Created an Official Case Study.</h2>
                   <p class="section-description mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas proin sed platea laoreet elementum dui. Sed eget duis habitant iaculis ante sagittis condimentum amet ornare. Pharetra magna auctor id lacus, dictum. Ultrices urna, elementum in libero, sollicitudin velit semper. Leo risus malesuada pretium, feugiat. Commodo, vitae hendrerit egestas enim amet, convallis egestas vel. Facilisi at orci, ullamcorper massa. </p>
                 </div>
@@ -177,7 +177,7 @@
               <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInDown">Over a year of working together we were able to 2x conversion</h4>
 
               <div class="mt-5 mb-4 d-flex justify-content-center">
-                <div class="col-12 col-lg-8 px-0 d-flex justify-content-center position-relative animated fadeInUp">
+                <div class="col-12 col-lg-8 px-0 d-flex justify-content-center position-relative animated fadeIn">
                   <div class="conversion-rate-optimization bg-white p-4 w-100">
                     <div class="cro-section d-flex flex-column p-1">
                       <h4 class="cro-section-title mb-1">Injecting Social Proof</h4>
@@ -209,8 +209,8 @@
             </div>
           </div>
 
-          <div class="section py-5 mt-5 mb-4 my-sm-5 pb-3">
-            <div class="container contact mt-2 mb-4">
+          <div class="section py-5 my-5 pb-3">
+            <div class="container contact py-4">
               <h2 class="section-title text-center animated fadeInDown">Want Awesome Work Like This For Your Brand?</h2>
               <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInUp">Apply now for a free cconsultant, and one of our strategist will be in touch shortly</h4>
               <div class="mt-5 d-flex justify-content-center">
@@ -230,12 +230,12 @@
 
     <footer class="footer">
       <div class="container py-5 d-flex justify-content-center flex-wrap">
-        <div class="logo mt-n1">
+        <div class="logo mt-n1 animated fadeIn">
           <a class="p-4" href="#"><img src="images/logo.svg" alt=""></a>
         </div>
       </div>
       <div class="footer-info py-3">
-        <div class="container my-1 d-flex justify-content-center flex-wrap">
+        <div class="container my-1 d-flex justify-content-center flex-wrap animated fadeIn">
           <span class="text-center">All Rights Reserved © SweatPants Agency 2019 | <a href="#">Privacy Policy</a></span>
         </div>
       </div>
