--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="mt-5 pt-2 pt-sm-5">
           <div class="container pb-5 sections d-flex justify-content-between flex-wrap">
-            <div class="col-md-6 pl-0 pr-md-4 pr-0 pb-3 d-flex flex-column animated fadeInLeft">
+            <div class="col-md-7 pl-0 pr-md-4 pr-0 pb-3 d-flex flex-column animated fadeInLeft">
               <div class="section">
                 <h2 class="section-title">THE CHALLENGE</h2>
                 <p class="section-description mt-3">After helping Hunt A Killer to a 8-figure run rate, we were asked to come back again 10 business days before Black Friday / Cyber Mondayand help reduce acquisition costs & 2x the active subscriber in 90 days.</p>
@@ -63,7 +63,18 @@
 
               <div class="section mt-5 pt-2">
                 <h2 class="section-title">OUR APPROACH</h2>
-                <p class="section-description mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum voluptas, quidem dolore a quod sunt id quia, impedit perspiciatis recusandae in eius officiis nobis maiores sed neque culpa sequi quaerat!</p>
+                <p class="section-description mt-3">
+                  From the minute, Sweat Pants Agency was given the challenge, we immediately dove into all aspects of acquisition.<br /> <br />
+                  <b>Facebook Advertising</b> <br />
+                  With Facebook Advertising, we started by analyzing the top performing audiences and creatives over the last 90 days, completely rebuilding campaigns from scratch.<br />
+                  At the same time, we started to develop new copy and creative, utilizing existing assets and looking at available user generated content. Additionally, we dove into customer reviews, customer services log, and customer surveys to develop new advertising angles.<br />
+                  After seeing some improvement but wanting for more, the co-founding partner of Sweat Pants Agency (David Tendrich) hopped on the customers and found out that customers were using Hunt A Killer as a date night product (a way for couples to connect in an engaging actvity at home).<br />
+                  Once making this discovery, we rewrote the ads to lean into date night and saw a masive improvement in cost of acquisition while expanding our market.<br /> <br />
+                  <b>Conversion Rate Optimization (CRO)</b> <br />
+                  While improving our Facebook ads, we also attacked conversion rate optimization with full force. We started by installing heatmaps and website recordings. We started by expanding credibility on the site, beefing up testimonials, and eliminating sections that didn't improve converison such as How It Works.<br />
+                  Then using customer feedback, we developed new hypotheses that we implemented in our CRO testing. We added a subtitle that reflected our top ad, saying "This Date Night, Hunt a Serial Killer Together". We added questions to our quiz funnel that asks people "How They Plan On Playing The Game" and much more.<br />
+                  Through all of these efforts, we were able to 2x Hunt A Killer's conversion over the next year.
+                </p>
               </div>
             </div>
             
@@ -99,21 +110,21 @@
                   <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4 animated fadeInLeft">
                     <div class="result bg-white d-flex flex-column align-items-center px-4 px-xl-5">
                       <div class="result-heading d-flex justify-content-center align-items-center">28%</div>
-                      <h4 class="result-title d-flex justify-content-center mt-4">Lorem Ipsum</h4>
+                      <h4 class="result-title d-flex justify-content-center mt-4 text-center">Lorem Ipsum</h4>
                       <p class="result-description text-center mt-2 pt-1 mx-xl-2">We found a new winning ad that reduced acquisitions costs tracked through Facebook by 28%</p>
                     </div>
                   </div>
                   <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4">
                     <div class="result bg-white d-flex flex-column align-items-center px-4">
                       <div class="result-heading d-flex justify-content-center align-items-center">2X</div>
-                      <h4 class="result-title d-flex justify-content-center mt-4">Lorem Ipsum</h4>
+                      <h4 class="result-title d-flex justify-content-center mt-4 text-center">Lorem Ipsum</h4>
                       <p class="result-description text-center mt-2 pt-1 mx-xl-3">We doubled the active subscriber based in 34 days (56 days before the already aggressive goal had scheduled)</p>
                     </div>
                   </div>
                   <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4 animated fadeInRight">
                     <div class="result bg-white d-flex flex-column align-items-center px-4 px-xl-5">
                       <div class="result-heading d-flex justify-content-center align-items-center">4.9X</div>
-                      <h4 class="result-title d-flex justify-content-center mt-4">Lorem Ipsum</h4>
+                      <h4 class="result-title d-flex justify-content-center mt-4 text-center">Lorem Ipsum</h4>
                       <p class="result-description text-center mt-2 pt-1">We increased subscribers using campaign budget optimization and automatic placements</p>
                     </div>
                   </div>
@@ -149,13 +160,11 @@
                 <div class="d-flex align-items-center justify-content-between pt-3 flex-wrap">
                   <div class="col-lg-4 pr-0 d-flex flex-lg-column nav flex-sm-nowrap animated fadeInLeft" role="tablist" aria-orientation="vertical">
                     <a class="tab active mb-3 mb-sm-0 mb-lg-2 mr-sm-3 mr-lg-0 p-4 d-flex flex-column" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                      <div class="tab-title ml-3">BEFORE</div>
-                      <p class="tab-description ml-3 mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                      <div class="tab-title py-2 ml-3">BEFORE</div>
                     </a>
 
                     <a class="tab mt-3 mt-sm-0 mt-lg-4 ml-sm-3 ml-lg-0 p-4 d-flex flex-column" data-toggle="pill" href="#after" role="tab" aria-controls="v-pills-profile" aria-selected="false">
-                      <div class="tab-title ml-3">AFTER</div>
-                      <p class="tab-description ml-3 mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                      <div class="tab-title py-2 ml-3">AFTER</div>
                     </a>
                   </div>
 
@@ -191,8 +200,8 @@
 
           <div class="section mt-5 mb-4 my-sm-5 pb-3">
             <div class="container contact mt-2 mb-4">
-              <h2 class="section-title text-center animated fadeInDown">Want Awesome Work Like This For Your Brand?</h2>
-              <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInUp">Apply now for a free cconsultant, and one of our strategist will be in touch shortly</h4>
+              <h2 class="section-title text-center animated fadeInDown">Ready To Grow Your eCommerce Brand?</h2>
+              <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInUp">If you have aggressive goals and are ready to scale, apply now for a free consultation.</h4>
               <div class="mt-5 d-flex justify-content-center">
                 <a class="btn-primary py-3 px-5 animated fadeInUp" href="#">Let's Talk</a>
               </div>
