added facebook case study section and removed spaces

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
         </div>
 
-        <div class="mt-5 pt-2 pt-sm-5">
+        <div class="mt-5 pt-2 pt-md-5">
           <div class="container pb-5 sections d-flex justify-content-between flex-wrap">
             <div class="col-md-7 pl-0 pr-md-4 pr-0 pb-3 d-flex flex-column animated fadeInLeft">
               <div class="section">
@@ -78,7 +78,7 @@
               </div>
             </div>
             
-            <div class="col-xl-4 mt-5 pt-2 mt-md-0 pt-md-0 col-md-5 px-0 animated fadeInRight">
+            <div class="col-xl-4 mt-5 pt-2 mt-md-0 pt-md-0 col-md-5 px-0 animated fadeInRight d-none d-sm-block">
               <div class="section">
                 <h2 class="section-title">SERVICES</h2>
                 <div class="services d-flex flex-column mt-4 pt-2">
@@ -102,7 +102,7 @@
 
           </div>
 
-          <div class="section my-5 py-5 light-bg">
+          <div class="section my-4 my-sm-5 py-5 light-bg">
             <div class="container my-2">
               <h2 class="section-title text-center animated fadeInDown">THE RESULT</h2>
               <div class="results mt-5 mb-4">
@@ -133,7 +133,7 @@
             </div>
           </div>
 
-          <div class="section my-5 py-md-5">
+          <div class="section my-4 my-sm-5 py-md-5">
             <div class="container mt-2 mb-4">
               <div class="d-flex justify-content-between">
                 <div class="col-md-6 py-5 pr-3 pr-lg-5 animated fadeInLeft">
@@ -151,7 +151,22 @@
             </div>
           </div>
 
-          <div class="section my-5 py-5 light-bg">
+          <div class="section my-4 my-sm-5 py-4 py-md-5">
+            <div class="container mb-4">
+              <div class="section-right d-flex justify-content-between flex-wrap">
+                <div class="section-right-column col-md-5 pt-md-5 pt-lg-0 px-xl-0 section-img d-flex align-items-start align-items-lg-center justify-content-end animated fadeInLeft">
+                  <img src="images/facebook-case-study.png" alt="">
+                </div>
+                <div class="col-md-6 py-4 pl-3 pl-lg-4 animated fadeInRight">
+                  <h2 class="section-title">Facebook's Team Was so Impressed... They Created an Official Case Study.</h2>
+                  <p class="section-description mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas proin sed platea laoreet elementum dui. Sed eget duis habitant iaculis ante sagittis condimentum amet ornare. Pharetra magna auctor id lacus, dictum. Ultrices urna, elementum in libero, sollicitudin velit semper. Leo risus malesuada pretium, feugiat. Commodo, vitae hendrerit egestas enim amet, convallis egestas vel. Facilisi at orci, ullamcorper massa. </p>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+          <div class="section my-4 my-sm-5 py-5 light-bg">
             <div class="container my-2">
               <h2 class="section-title text-center animated fadeInDown">CONVERSION RATE OPTIMIZATION</h2>
               <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInDown">Over a year of working together we were able to 2x conversion</h4>
@@ -184,7 +199,17 @@
             </div>
           </div>
 
-          <div class="section my-5 py-4 py-sm-5">
+          <div class="section my-4 my-sm-5 py-5">
+            <div class="container contact mt-2 mb-4">
+              <h2 class="section-title text-center animated fadeInDown">Ready To Grow Your eCommerce Brand?</h2>
+              <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInUp">If you have aggressive goals and are ready to scale, apply now for a free consultation.</h4>
+              <div class="mt-5 d-flex justify-content-center">
+                <a class="btn-primary py-3 px-5 animated fadeInUp" href="#">Let's Talk</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="section my-4 my-sm-5 py-4">
             <div class="container mt-2 mb-4">
               <h2 class="section-title text-center animated fadeInDown">See What Hunt A Killer Say About Sweat Pants Agency</h2>
               <div class="mt-5 d-flex justify-content-center">
@@ -194,16 +219,6 @@
                     Your browser does not support the video tag.
                   </video>
                 </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="section mt-5 mb-4 my-sm-5 pb-3">
-            <div class="container contact mt-2 mb-4">
-              <h2 class="section-title text-center animated fadeInDown">Ready To Grow Your eCommerce Brand?</h2>
-              <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInUp">If you have aggressive goals and are ready to scale, apply now for a free consultation.</h4>
-              <div class="mt-5 d-flex justify-content-center">
-                <a class="btn-primary py-3 px-5 animated fadeInUp" href="#">Let's Talk</a>
               </div>
             </div>
           </div>
