fixed responsive issues

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
             </div>
           </div>
 
-          <div class="section my-4 my-sm-5 py-md-5">
-            <div class="container mt-2 mb-4">
+          <div class="section my-4 my-sm-5 py-4 py-sm-0 py-xl-5">
+            <div class="container">
               <div class="d-flex justify-content-between">
-                <div class="col-md-6 py-5 pr-3 pr-lg-5 animated fadeInLeft">
+                <div class="col-md-6 py-md-5 pr-3 pr-lg-5 animated fadeInLeft">
                   <h2 class="section-title">Facebook Advertising</h2>
                   <div class="mt-4 section-img d-block d-md-none">
                     <img class="img-fluid" src="images/facebook-ad.png" alt="">
@@ -151,14 +151,17 @@
             </div>
           </div>
 
-          <div class="section my-4 my-sm-5 py-4 py-md-5">
+          <div class="section my-4 my-sm-5 py-4 py-sm-0 py-xl-5">
             <div class="container mb-4">
               <div class="section-right d-flex justify-content-between flex-wrap">
-                <div class="section-right-column col-md-5 pt-md-5 pt-lg-0 px-xl-0 section-img d-flex align-items-start align-items-lg-center justify-content-end animated fadeInLeft">
+                <div class="section-right-column col-md-5 pt-md-5 pt-lg-0 px-xl-0 section-img d-none d-md-flex align-items-start align-items-lg-center justify-content-end animated fadeInLeft">
                   <img src="images/facebook-case-study.png" alt="">
                 </div>
-                <div class="col-md-6 py-4 pl-3 pl-lg-4 animated fadeInRight">
+                <div class="col-md-6 py-md-4 pl-3 pl-lg-4 animated fadeInRight">
                   <h2 class="section-title">Facebook's Team Was so Impressed... They Created an Official Case Study.</h2>
+                  <div class="mt-4 section-img d-block d-md-none">
+                    <img class="img-fluid" src="images/facebook-ad.png" alt="">
+                  </div>
                   <p class="section-description mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas proin sed platea laoreet elementum dui. Sed eget duis habitant iaculis ante sagittis condimentum amet ornare. Pharetra magna auctor id lacus, dictum. Ultrices urna, elementum in libero, sollicitudin velit semper. Leo risus malesuada pretium, feugiat. Commodo, vitae hendrerit egestas enim amet, convallis egestas vel. Facilisi at orci, ullamcorper massa. </p>
                 </div>
 
@@ -172,14 +175,14 @@
               <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInDown">Over a year of working together we were able to 2x conversion</h4>
 
               <div class="before-after mt-5 mb-4">
-                <div class="d-flex align-items-center justify-content-between pt-3 flex-wrap">
-                  <div class="col-lg-4 pr-0 d-flex flex-lg-column nav flex-sm-nowrap animated fadeInLeft" role="tablist" aria-orientation="vertical">
-                    <a class="tab active mb-3 mb-sm-0 mb-lg-2 mr-sm-3 mr-lg-0 p-4 d-flex flex-column" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                      <div class="tab-title py-2 ml-3">BEFORE</div>
+                <div class="d-flex align-items-center justify-content-between flex-wrap">
+                  <div class="col-lg-4 pr-0 d-flex justify-content-center flex-lg-column nav flex-sm-nowrap animated fadeInLeft" role="tablist" aria-orientation="vertical">
+                    <a class="tab active my-0 my-lg-3 mr-3 mr-lg-0 p-4 d-flex flex-column" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                      <div class="tab-title py-1 py-lg-2 px-4 px-lg-3">BEFORE</div>
                     </a>
 
-                    <a class="tab mt-3 mt-sm-0 mt-lg-4 ml-sm-3 ml-lg-0 p-4 d-flex flex-column" data-toggle="pill" href="#after" role="tab" aria-controls="v-pills-profile" aria-selected="false">
-                      <div class="tab-title py-2 ml-3">AFTER</div>
+                    <a class="tab my-0 my-lg-3 ml-3 ml-lg-0 p-4 d-flex flex-column" data-toggle="pill" href="#after" role="tab" aria-controls="v-pills-profile" aria-selected="false">
+                      <div class="tab-title py-1 py-lg-2 px-4 px-lg-3">AFTER</div>
                     </a>
                   </div>
 
@@ -200,7 +203,7 @@
           </div>
 
           <div class="section my-4 my-sm-5 py-5">
-            <div class="container contact mt-2 mb-4">
+            <div class="container contact mt-2">
               <h2 class="section-title text-center animated fadeInDown">Ready To Grow Your eCommerce Brand?</h2>
               <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInUp">If you have aggressive goals and are ready to scale, apply now for a free consultation.</h4>
               <div class="mt-5 d-flex justify-content-center">
@@ -210,7 +213,7 @@
           </div>
 
           <div class="section my-4 my-sm-5 py-4">
-            <div class="container mt-2 mb-4">
+            <div class="container mb-4">
               <h2 class="section-title text-center animated fadeInDown">See What Hunt A Killer Say About Sweat Pants Agency</h2>
               <div class="mt-5 d-flex justify-content-center">
                 <div class="video col-12 col-lg-10">
