Added subheadline for 'THE CHALLENGE' section

--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
           <div class="container pb-5 sections d-flex justify-content-between flex-wrap">
             <div class="col-md-7 pl-0 pr-md-4 pr-0 pb-3 d-flex flex-column animated fadeInLeft">
               <div class="section">
-                <h2 class="section-title">THE CHALLENGE</h2>
-                <p class="section-description mt-3">After helping Hunt A Killer to a 8-figure run rate, we were asked to come back again 10 business days before Black Friday / Cyber Mondayand help reduce acquisition costs & 2x the active subscriber in 90 days.</p>
+                <div class="d-flex flex-column">
+                  <h2 class="section-title">THE CHALLENGE</h2>
+                  <h2 class="section-title title-sm mt-2">DOUBLE ACTIVE SUBSCRIBERS IN 90 DAYS</h2>
+                </div>
+                <p class="section-description mt-3">After helping Hunt A Killer to a 8-figure run rate, Sweat Pants Agency was asked to come back again 10 business days before Black Friday / Cyber Monday and help reduce acquisition costs & 2x the active subscriber in 90 days.</p>
               </div>
 
               <div class="section mt-5 pt-2">
