Moved OUR APPROACH section to the bottom

--- a/index.html
+++ b/index.html
@@ -55,29 +55,13 @@
 
         <div class="mt-5 pt-2 pt-md-5">
           <div class="container pb-5 sections d-flex justify-content-between flex-wrap">
-            <div class="col-md-7 pl-0 pr-md-4 pr-0 pb-3 d-flex flex-column animated fadeInLeft">
+            <div class="col-md-6 pl-0 pr-md-4 pr-0 pb-3 d-flex flex-column animated fadeInLeft">
               <div class="section">
                 <div class="d-flex flex-column">
                   <h2 class="section-title">THE CHALLENGE</h2>
                   <h2 class="section-title title-sm mt-2">DOUBLE ACTIVE SUBSCRIBERS IN 90 DAYS</h2>
                 </div>
                 <p class="section-description mt-3">After helping Hunt A Killer to a 8-figure run rate, Sweat Pants Agency was asked to come back again 10 business days before Black Friday / Cyber Monday and help reduce acquisition costs & 2x the active subscriber in 90 days.</p>
-              </div>
-
-              <div class="section mt-5 pt-2">
-                <h2 class="section-title">OUR APPROACH</h2>
-                <p class="section-description mt-3">
-                  From the minute, Sweat Pants Agency was given the challenge, we immediately dove into all aspects of acquisition.<br /> <br />
-                  <b>Facebook Advertising</b> <br />
-                  With Facebook Advertising, we started by analyzing the top performing audiences and creatives over the last 90 days, completely rebuilding campaigns from scratch.<br />
-                  At the same time, we started to develop new copy and creative, utilizing existing assets and looking at available user generated content. Additionally, we dove into customer reviews, customer services log, and customer surveys to develop new advertising angles.<br />
-                  After seeing some improvement but wanting for more, the co-founding partner of Sweat Pants Agency (David Tendrich) hopped on the customers and found out that customers were using Hunt A Killer as a date night product (a way for couples to connect in an engaging actvity at home).<br />
-                  Once making this discovery, we rewrote the ads to lean into date night and saw a masive improvement in cost of acquisition while expanding our market.<br /> <br />
-                  <b>Conversion Rate Optimization (CRO)</b> <br />
-                  While improving our Facebook ads, we also attacked conversion rate optimization with full force. We started by installing heatmaps and website recordings. We started by expanding credibility on the site, beefing up testimonials, and eliminating sections that didn't improve converison such as How It Works.<br />
-                  Then using customer feedback, we developed new hypotheses that we implemented in our CRO testing. We added a subtitle that reflected our top ad, saying "This Date Night, Hunt a Serial Killer Together". We added questions to our quiz funnel that asks people "How They Plan On Playing The Game" and much more.<br />
-                  Through all of these efforts, we were able to 2x Hunt A Killer's conversion over the next year.
-                </p>
               </div>
             </div>
             
@@ -139,15 +123,26 @@
           <div class="section my-4 my-sm-5 py-4 py-sm-0 py-xl-5">
             <div class="container">
               <div class="d-flex justify-content-between">
-                <div class="col-md-6 py-md-5 pr-3 pr-lg-5 animated fadeInLeft">
-                  <h2 class="section-title">Facebook Advertising</h2>
+                <div class="col-md-7 pr-3 pr-lg-5 animated fadeInLeft">
+                  <h2 class="section-title">OUR APPROACH</h2>
                   <div class="mt-4 section-img d-block d-md-none">
                     <img class="img-fluid" src="images/facebook-ad.png" alt="">
                   </div>
-                  <p class="section-description mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas proin sed platea laoreet elementum dui. Sed eget duis habitant iaculis ante sagittis condimentum amet ornare. Pharetra magna auctor id lacus, dictum. Ultrices urna, elementum in libero, sollicitudin velit semper. Leo risus malesuada pretium, feugiat. Commodo, vitae hendrerit egestas enim amet, convallis egestas vel. Facilisi at orci, ullamcorper massa. </p>
+                  <p class="section-description mt-4 pr-lg-3">
+                    From the minute, Sweat Pants Agency was given the challenge, we immediately dove into all aspects of acquisition.<br /> <br />
+                    <b>Facebook Advertising</b> <br />
+                    With Facebook Advertising, we started by analyzing the top performing audiences and creatives over the last 90 days, completely rebuilding campaigns from scratch.<br />
+                    At the same time, we started to develop new copy and creative, utilizing existing assets and looking at available user generated content. Additionally, we dove into customer reviews, customer services log, and customer surveys to develop new advertising angles.<br />
+                    After seeing some improvement but wanting for more, the co-founding partner of Sweat Pants Agency (David Tendrich) hopped on the customers and found out that customers were using Hunt A Killer as a date night product (a way for couples to connect in an engaging actvity at home).<br />
+                    Once making this discovery, we rewrote the ads to lean into date night and saw a masive improvement in cost of acquisition while expanding our market.<br /> <br />
+                    <b>Conversion Rate Optimization (CRO)</b> <br />
+                    While improving our Facebook ads, we also attacked conversion rate optimization with full force. We started by installing heatmaps and website recordings. We started by expanding credibility on the site, beefing up testimonials, and eliminating sections that didn't improve converison such as How It Works.<br />
+                    Then using customer feedback, we developed new hypotheses that we implemented in our CRO testing. We added a subtitle that reflected our top ad, saying "This Date Night, Hunt a Serial Killer Together". We added questions to our quiz funnel that asks people "How They Plan On Playing The Game" and much more.<br />
+                    Through all of these efforts, we were able to 2x Hunt A Killer's conversion over the next year.
+                  </p>
                 </div>
 
-                <div class="col-sm-6 col-lg-5 section-img d-none d-md-flex align-items-start align-items-sm-center justify-content-end animated fadeInRight">
+                <div class="col-sm-6 col-lg-5 section-img mt-lg-4 d-none d-md-flex align-items-start justify-content-end animated fadeInRight">
                   <img src="images/facebook-ad.png" alt="">
                 </div>
               </div>
@@ -163,7 +158,7 @@
                 <div class="col-md-6 py-md-4 pl-3 pl-lg-4 animated fadeInRight">
                   <h2 class="section-title">Facebook's Team Was so Impressed... They Created an Official Case Study.</h2>
                   <div class="mt-4 section-img d-block d-md-none">
-                    <img class="img-fluid" src="images/facebook-ad.png" alt="">
+                    <img class="img-fluid" src="images/facebook-case-study.png" alt="">
                   </div>
                   <p class="section-description mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas proin sed platea laoreet elementum dui. Sed eget duis habitant iaculis ante sagittis condimentum amet ornare. Pharetra magna auctor id lacus, dictum. Ultrices urna, elementum in libero, sollicitudin velit semper. Leo risus malesuada pretium, feugiat. Commodo, vitae hendrerit egestas enim amet, convallis egestas vel. Facilisi at orci, ullamcorper massa. </p>
                 </div>
