added cta section, removed headline and padding from hero section

--- a/index.html
+++ b/index.html
@@ -48,20 +48,30 @@
               <div class="company-logo animated fadeInDown">
                 <img src="images/huntakiller.svg" alt="">
               </div>
-              <h1 class="casestudy-title mt-4 animated fadeInUp">Catching more players using Facebook’s campaign budget optimization</h1>
+              <!-- <h1 class="casestudy-title mt-4 animated fadeInUp">Catching more players using Facebook’s campaign budget optimization</h1> -->
             </div>          
           </div>
         </div>
 
-        <div class="mt-5 pt-2 pt-md-5">
-          <div class="container pb-5 sections d-flex justify-content-between flex-wrap">
-            <div class="col-md-6 pl-0 pr-md-4 pr-0 pb-3 d-flex flex-column animated fadeInLeft">
+        <div class="mt-md-4">
+          <div class="container py-5 sections d-flex justify-content-between flex-wrap">
+            <div class="col-md-6 pl-0 pr-md-4 pr-0 d-flex flex-column animated fadeInLeft">
               <div class="section">
                 <div class="d-flex flex-column">
-                  <h2 class="section-title">THE CHALLENGE</h2>
-                  <h2 class="section-title title-sm mt-2">DOUBLE ACTIVE SUBSCRIBERS IN 90 DAYS</h2>
+                  <h2 class="section-title text-center text-sm-left">THE CHALLENGE</h2>
+                  <h2 class="section-title title-sm mt-2 text-center text-sm-left">DOUBLE ACTIVE SUBSCRIBERS IN 90 DAYS</h2>
                 </div>
-                <p class="section-description mt-3">After helping Hunt A Killer to a 8-figure run rate, Sweat Pants Agency was asked to come back again 10 business days before Black Friday / Cyber Monday and help reduce acquisition costs & 2x the active subscriber in 90 days.</p>
+                <p class="section-description mt-3 text-center text-sm-left">After helping Hunt A Killer to a 8-figure run rate, Sweat Pants Agency was asked to come back again 10 business days before Black Friday / Cyber Monday and help reduce acquisition costs & 2x the active subscriber in 90 days.</p>
+              </div>
+
+              <div class="section mt-5">
+                <div class="d-flex flex-column">
+                  <h2 class="section-title text-center text-sm-left">Ready To Grow?</h2>
+                </div>
+                <p class="section-description mt-3 text-center text-sm-left">If you want results like this, schedule a free strategy call</p>
+                <div class="d-flex justify-content-center justify-content-sm-start mt-4">
+                  <a class="btn-primary py-3 px-5 animated fadeInUp" href="#">Let's Go!</a>
+                </div>
               </div>
             </div>
             
