centered section headlines for mobile devices and removed unnecessary spacing

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
           <div class="section my-4 my-sm-5 py-4 py-sm-0 py-xl-5">
             <div class="container">
               <div class="d-flex justify-content-between">
-                <div class="col-md-7 pr-3 pr-lg-5 animated fadeInLeft">
-                  <h2 class="section-title">OUR APPROACH</h2>
+                <div class="col-md-7 px-0 px-sm-3 pr-lg-5 animated fadeInLeft">
+                  <h2 class="section-title text-center text-sm-left">OUR APPROACH</h2>
                   <div class="mt-4 section-img d-block d-md-none">
                     <img class="img-fluid" src="images/facebook-ad.png" alt="">
                   </div>
@@ -165,8 +165,8 @@
                 <div class="section-right-column col-md-5 pt-md-5 pt-lg-0 px-xl-0 section-img d-none d-md-flex align-items-start align-items-lg-center justify-content-end animated fadeInLeft">
                   <img src="images/facebook-case-study.png" alt="">
                 </div>
-                <div class="col-md-6 py-md-4 pl-3 pl-lg-4 animated fadeInRight">
-                  <h2 class="section-title">Facebook's Team Was so Impressed... They Created an Official Case Study.</h2>
+                <div class="col-md-6 py-md-4 px-0 px-sm-3 pl-lg-4 animated fadeInRight">
+                  <h2 class="section-title text-center text-sm-left">Facebook's Team Was so Impressed... They Created an Official Case Study.</h2>
                   <div class="mt-4 section-img d-block d-md-none">
                     <img class="img-fluid" src="images/facebook-case-study.png" alt="">
                   </div>
