Changed section titles color and removed paragraph text from 'THE RESULT' section

--- a/index.html
+++ b/index.html
@@ -105,24 +105,21 @@
               <div class="results mt-5 mb-4">
                 <div class="row justify-content-center">
                   <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4 animated fadeInLeft">
-                    <div class="result bg-white d-flex flex-column align-items-center px-4 px-xl-5">
+                    <div class="result bg-white d-flex flex-column align-items-center px-4 mx-lg-2 px-xl-5">
                       <div class="result-heading d-flex justify-content-center align-items-center">28%</div>
                       <h4 class="result-title d-flex justify-content-center mt-4 text-center">Decrease In CAC</h4>
-                      <p class="result-description text-center mt-2 pt-1 mx-xl-2">We found a new winning ad that reduced acquisitions costs tracked through Facebook by 28%</p>
                     </div>
                   </div>
                   <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4">
-                    <div class="result bg-white d-flex flex-column align-items-center px-4">
+                    <div class="result bg-white d-flex flex-column align-items-center px-4 mx-lg-2">
                       <div class="result-heading d-flex justify-content-center align-items-center">2X</div>
                       <h4 class="result-title d-flex justify-content-center mx-xl-2 mt-4 text-center">Increase In Active Subscribers In 34 Days</h4>
-                      <p class="result-description text-center mt-2 pt-1 mx-xl-3">We doubled the active subscriber based in 34 days (56 days before the already aggressive goal had scheduled)</p>
                     </div>
                   </div>
                   <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4 animated fadeInRight">
-                    <div class="result bg-white d-flex flex-column align-items-center px-4 px-xl-5">
+                    <div class="result bg-white d-flex flex-column align-items-center px-4 mx-lg-2 px-xl-5">
                       <div class="result-heading d-flex justify-content-center align-items-center">4.9X</div>
                       <h4 class="result-title d-flex justify-content-center mt-4 text-center">Increase In Revenue In 30 Days</h4>
-                      <p class="result-description text-center mt-2 pt-1">We increased subscribers using campaign budget optimization and automatic placements</p>
                     </div>
                   </div>
                 </div>
