Changed color and font size for section secondary headline

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <div class="col-md-6 pl-0 pr-md-4 pr-0 d-flex flex-column animated fadeInLeft">
               <div class="section">
                 <div class="d-flex flex-column">
-                  <h2 class="section-title text-center text-sm-left">THE CHALLENGE</h2>
-                  <h2 class="section-title title-sm mt-2 text-center text-sm-left">DOUBLE ACTIVE SUBSCRIBERS IN 90 DAYS</h2>
+                  <h2 class="section-title title-sm text-center text-sm-left">&nbsp;THE CHALLENGE</h2>
+                  <h2 class="section-title mt-2 text-center text-sm-left">Double Active<br/> Subscribers In 90 Days</h2>
                 </div>
                 <p class="section-description mt-3 text-center text-sm-left">After helping Hunt A Killer to a 8-figure run rate, Sweat Pants Agency was asked to come back again 10 business days before Black Friday / Cyber Monday and help reduce acquisition costs & 2x the active subscriber in 90 days.</p>
               </div>
