removed spacing in 'THE RESULTS' section

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
           <div class="section my-4 my-sm-5 py-5 light-bg">
             <div class="container my-2">
               <h2 class="section-title text-center animated fadeInDown">THE RESULT</h2>
-              <div class="results mt-5 mb-4">
-                <div class="row justify-content-center">
+              <div class="results mt-4 my-sm-4">
+                <div class="row justify-content-center pt-sm-2">
                   <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4 animated fadeInLeft">
                     <div class="result bg-white d-flex flex-column align-items-center px-4 mx-lg-2 px-xl-5">
                       <div class="result-heading d-flex justify-content-center align-items-center">28%</div>
