moved 'OUR APPROACH' section image below facebook advertising title and removed second section

--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
               <div class="d-flex justify-content-between">
                 <div class="col-md-7 px-0 px-sm-3 pr-lg-5 animated fadeInLeft">
                   <h2 class="section-title text-center text-sm-left">OUR APPROACH</h2>
-                  <div class="mt-4 section-img d-block d-md-none">
-                    <img class="img-fluid" src="images/facebook-ad.png" alt="">
-                  </div>
-                  <p class="section-description mt-4 pr-lg-3">
+                  <p class="section-description text-center text-sm-left mt-4 pr-lg-3">
                     From the minute, Sweat Pants Agency was given the challenge, we immediately dove into all aspects of acquisition.<br /> <br />
-                    <b>Facebook Advertising</b> <br />
+                    <b>Facebook Advertising</b>
+                    <span class="my-2 section-img d-block d-md-none">
+                      <img class="img-fluid" src="images/facebook-ad.png" alt="" />
+                    </span>
                     With Facebook Advertising, we started by analyzing the top performing audiences and creatives over the last 90 days, completely rebuilding campaigns from scratch.<br />
                     At the same time, we started to develop new copy and creative, utilizing existing assets and looking at available user generated content. Additionally, we dove into customer reviews, customer services log, and customer surveys to develop new advertising angles.<br />
                     After seeing some improvement but wanting for more, the co-founding partner of Sweat Pants Agency (David Tendrich) hopped on the customers and found out that customers were using Hunt A Killer as a date night product (a way for couples to connect in an engaging actvity at home).<br />
@@ -210,7 +210,7 @@
           <div class="section my-4 my-sm-5 py-5">
             <div class="container">
               <h2 class="section-title text-center animated fadeInDown">See What Hunt A Killer Say About Sweat Pants Agency</h2>
-              <div class="mt-5 d-flex justify-content-center">
+              <div class="mt-4 mt-sm-5 d-flex justify-content-center">
                 <div class="video col-12 col-lg-10">
                   <video poster="images/video.png" width="100%" controls>
                     <source src="Sweatpants-Agency.mp4" type="video/mp4">
