Changed primary color, logo color and section title color

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             </div>
           </div>
 
-          <div class="section my-sm-5 pb-5">
+          <div class="section my-sm-5 pb-4">
             <div class="container contact mt-2">
               <h2 class="section-title text-center animated fadeInDown">Ready To Grow Your eCommerce Brand?</h2>
               <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInUp">If you have aggressive goals and are ready to scale, apply now for a free consultation.</h4>
@@ -220,7 +220,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src='scripts/main.min.js'></script>
 
-    <footer class="footer mt-5 pt-5">
+    <footer class="footer mt-5">
       <div class="container py-5 d-flex justify-content-center flex-wrap">
         <div class="logo mt-n1">
           <a class="p-4" href="#"><img src="images/logo.svg" alt=""></a>
