changed colors for e-mail marketing icon and service title

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <p class="section-description mt-3 text-center text-sm-left">If you want results like this, schedule a free strategy call</p>
                 <div class="d-flex justify-content-center justify-content-sm-start mt-4">
-                  <a class="btn-primary py-3 px-5 animated fadeInUp" href="#">Let's Go!</a>
+                  <a class="btn-primary py-3 px-5 animated fadeInUp" href="#"><span class="d-flex my-1">Let's Go!</span></a>
                 </div>
               </div>
             </div>
@@ -208,7 +208,7 @@
               <h2 class="section-title text-center animated fadeInDown">Ready To Grow Your eCommerce Brand?</h2>
               <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInUp">If you have aggressive goals and are ready to scale, apply now for a free consultation.</h4>
               <div class="mt-4 d-flex justify-content-center">
-                <a class="btn-primary py-3 px-5 animated fadeInUp" href="#">Let's Talk</a>
+                <a class="btn-primary py-3 px-5 animated fadeInUp" href="#"><span class="d-flex my-1">Let's Go!</span></a>
               </div>
             </div>
           </div>
